# Remitwise-Contracts-man

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
analytics/test_snapshots/tests/: test_calculate_health_score.1.json  test_get_category_analysis.1.json  test_track_remittance.1.json
bill_payments/src/: lib.rs  test.rs
bill_payments/test_snapshots/: test_notification_flow.1.json
data_migration/: Cargo.toml
data_migration/src/: lib.rs
insurance/src/: lib.rs
rate_limiter/test_snapshots/tests/: test_check_rate_limit.1.json  test_get_rate_limit_status.1.json  test_init_rate_limit.1.json  test_whitelist.1.json
recurring_remittance/test_snapshots/tests/: test_cancel_schedule.1.json  test_create_schedule.1.json  test_modify_schedule.1.json  test_pause_resume_schedule.1.json
remittance_split/src/: lib.rs  test.rs
remittance_split/test_snapshots/test/: test_calculate_complex_rounding.1.json  test_calculate_split.1.json  test_calculate_split_rounding.1.json  test_calculate_split_zero_amount.1.json  test_remittance_schedule_validation.1.json  test_remittance_schedule_zero_amount.1.json  test_update_split.1.json
remittance_split/test_snapshots/tests/: distribute_usdc_apportions_tokens_to_recipients.1.json  export_import_snapshot_and_audit.1.json  replay_attack_rejected.1.json  split_allocations_report_categories_and_amounts.1.json
savings_goals/src/: lib.rs  test.rs
savings_goals/test_snapshots/test/: test_add_to_goal_increments.1.json  test_add_to_non_existent_goal.1.json  test_create_goal_unique_ids.1.json  test_get_all_goals.1.json  (+5 more)
(+15 files in other folders)
